# urho-osp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  OSP.cpp  OSP.h  PlanWren.h  README.md  appveyor.yml  config.h.in  main.cpp
src/: .gitignore  ActiveArea.cpp  ActiveArea.h  AstronomicalBody.cpp  AstronomicalBody.h  CMakeLists.txt  Entity.cpp  Entity.h  GLTFFile.cpp  GLTFFile.h  LongVector3.cpp  LongVector3.h  Machine.cpp  Machine.h  MachineRocket.cpp  MachineRocket.h  Machines.h  NodeSat.cpp  NodeSat.h  OSP.cpp  OSP.h  OspUniverse.cpp  OspUniverse.h  PerformanceCurves.cpp  PerformanceCurves.h  PlanWren.cpp  PlanWren.h  PlanetTerrain.cpp  PlanetTerrain.h  PlanetWrenderer.cpp  PlanetWrenderer.h  Satellite.cpp  Satellite.h  config.h  main.cpp
src/Machines/: BlueprintMachine.cpp  BlueprintMachine.h  Machine.cpp  Machine.h  MachineControl.cpp  MachineControl.h  MachineDebugger.cpp  MachineDebugger.h  MachineDivinePower.cpp  MachineDivinePower.h  MachineRocket.cpp  MachineRocket.h  Wire.cpp  Wire.h
src/Resource/: GLTFFile.cpp  GLTFFile.h  PerformanceCurves.cpp  PerformanceCurves.h
src/Satellites/: ActiveArea.cpp  ActiveArea.h  AstronomicalBody.cpp  AstronomicalBody.h  NodeSat.cpp  NodeSat.h  Satellite.cpp  Satellite.h
src/Terrain/: PlanetTerrain.cpp  PlanetTerrain.h  PlanetWrenderer.cpp  PlanetWrenderer.h
src/Trajectories/: Trajectory.cpp  Trajectory.h
tests/: sphereNormalMap.html  subdividing.html
